--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,15 @@
             <version>6.2.0</version>
         </dependency>
         <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.9.8</version>
+            <version>1.9.22.1</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.9.8</version>
+            <version>1.9.22.1</version>
         </dependency>
     </dependencies>
 
